--- a/products/static/css/products/list.css
+++ b/products/static/css/products/list.css
@@ -1,8 +1,9 @@
 .grid-container-list {
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: #2196F3;
+  /*background-color: #2196F3;*/
   padding: 10px;
+
 }
 body{
   direction: rtl;
@@ -12,11 +13,12 @@ color: purple;
 padding: 20%;
 }
 .grid-item-list {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-color: beige;
+  /*border: 1px solid rgba(0, 0, 0, 0.8);*/
   /*padding: 20px;*/
   font-size: 30px;
   text-align: center;
+
 }
 .grid-item-description{
   color: green;
