--- a/products/templates/parent/base.html
+++ b/products/templates/parent/base.html
@@ -2,18 +2,44 @@
 {% load static %}
 <html lang="en">
 <head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <link rel="shortcut icon" href='{% static "/images/favicon.png" %}' type="image/x-icon">
+
     <meta charset="UTF-8" dir="rtl">
     <title>
         {% block title %}
         {% endblock %}
     </title>
+
+    <script src='{%  static 'js/jquery-3.4.1.min.js' %}' ></script>
+    <script src='{%  static 'js/custom.js' %}'></script>
+    <script src='{%  static 'js/bootstrap.js' %}'></script>
+{#    <link rel="stylesheet" type="text/css" href='{%  https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css %}' />#}
+
+  <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href='{% static 'css/bootstrap.css' %}' />
+
+  <!-- Custom styles for this template -->
+    <link  rel="stylesheet" type="text/css" href='{% static "css/style.css" %}'  />
+  <!-- responsive style -->
+    <link rel="stylesheet"  href='{% static "css/responsive.css" %}'/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/products/list.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/products/detail.css' %}">
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
         {% block head %}
         {% endblock %}
 </head>
 <body>
-
+{% include "partials/navigation.html" %}
         {% block content %}
         {% endblock %}
 </body>
