--- a/products/static/css/products/detail.css
+++ b/products/static/css/products/detail.css
@@ -6,10 +6,86 @@
 /*    margin-left: 20%;*/
 /*    margin-right: 20%;*/
 /*}*/
+
 .author-info{
     padding-left: 20%;
 }
 .details-items{
-    font-weight: 500;
+    direction: rtl;
     color: darkturquoise;
+}
+.detail-image-item{
+    padding-left: 50%;
+}
+.card{
+    margin: 10%;
+}
+.title-name-detail-item{
+    padding-top: 4%;
+    padding-left: 80%;
+}
+.comment {
+    padding-left: 70%;
+    border: 2px solid #b3d7ff;
+    border-radius: 12px;
+  /*padding: 5px;*/
+}
+#id_name{
+
+    border: 2px solid blue;
+    border-radius: 12px;
+}
+#id_body{
+    border: 2px solid blue;
+    border-radius: 12px;
+}
+.button {
+  --b: 3px;   /* border thickness */
+  --s: .15em; /* size of the corner */
+  --c: #BD5532;
+
+  padding: calc(.05em + var(--s)) calc(.3em + var(--s));
+  color: var(--c);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--c) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .2em;
+}
+.button:hover,
+.button:focus-visible{
+  --_p: 0px;
+  outline-color: var(--c);
+  outline-offset: .05em;
+}
+.button:active {
+  background: var(--c);
+  color: #fff;
+}
+
+/* body {
+  height: 100vh;
+  margin: 0;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 20px;
+  place-content: center;
+  background: #DAEDFB;
+} */
+.button {
+  font-family: system-ui, sans-serif;
+  font-weight: bold;
+  font-size: 4rem;
+  cursor: pointer;
+  border: none;
+  margin: .1em;
+}
+.form-comment{
+    padding-left: 950px;
+    padding-top: 30px;
+}
+#id_body{
+
 }
