--- a/products/templates/forms/contact_us.html
+++ b/products/templates/forms/contact_us.html
@@ -1,32 +1,74 @@
+{% extends "parent/base.html" %}
 {% load static %}
 {% load bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% block content %}
 <section class="get-in-touch">
-   <h1 class="title">Get in touch</h1>
+   <h1 class="title"> تماس با ما </h1>
    <form class="contact-form row">
+   {% csrf_token %}
       <div class="form-field col-lg-6">
-         <input id="name" class="input-text js-input" type="text" required>
-         <label class="label" for="name">Name</label>
+         <input name="name" id="name" class="input-text js-input" type="text"
+                {% if form.name.value %} value="{{ form.name.value }}" {% endif %}
+                required>
+         <label class="label" for="name">نام</label>
       </div>
       <div class="form-field col-lg-6 ">
-         <input id="email" class="input-text js-input" type="email" required>
+         <input id="email" class="input-text js-input" type="email" name="email"
+                                {% if form.email.value %} value="{{ form.email.value }}" {% endif %}
+                required>
          <label class="label" for="email">E-mail</label>
       </div>
-      <div class="form-field col-lg-6 ">
-         <input id="company" class="input-text js-input" type="text" required>
-         <label class="label" for="company">Company Name</label>
-      </div>
+{#      <div class="form-field col-lg-6 ">#}
+{#         <input id="company" class="input-text js-input" type="text" required>#}
+{#         <label class="label" for="company"> Name</label>#}
+{#      </div>#}
        <div class="form-field col-lg-6 ">
-         <input id="phone" class="input-text js-input" type="text" required>
-         <label class="label" for="phone">Contact Number</label>
+         <input id="phone" class="input-text js-input" type="text" name="phone"
+                                {% if form.phone.value %} value="{{ form.phone.value }}" {% endif %}
+                required>
+         <label class="label" for="phone"> شماره تماس</label>
       </div>
       <div class="form-field col-lg-12">
-         <input id="message" class="input-text js-input" type="text" required>
-         <label class="label" for="message">Message</label>
+         <input id="message" class="input-text js-input" type="text" name="message"
+                                {% if form.message.value %} value="{{ form.message.value }}" {% endif %}
+                required>
+         <label class="label" for="message">متن </label>
       </div>
       <div class="form-field col-lg-12">
-         <input class="submit-btn" type="submit" value="Submit">
+         <select name="subject">
+             <option value="پیشنهاد"
+             {% if form.subject.value == "پیشنهاد" %} selected {% endif %}
+             >
+پیشنهاد
+             </option>
+             <option value="انتقاد"
+                 {% if form.subject.value == " انتقاد" %} selected {% endif %}
+             >
+                 انتقاد
+             </option>
+             <option value="گزارش"
+                 {% if form.subject.value == "گزارش" %} selected {% endif %}
+             >
+                 گزارش
+             </option>
+         </select>
       </div>
    </form>
+    {% if form.errors %}
+        لطفا خطا های زیر را اصلاح کنید
+        <br>
+        {% for field in form %}
+            {% if field.errors %}
+                {% for error in field.errors %}
+                    {{ field.label }}:{{ error }}
+                {% endfor %}
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+    {% if form.non_field_errors %}
+        {{ form.non_field_errors }}
+    {% endif %}
 </section>
+{% endblock %}
