--- a/products/templates/forms/login.html
+++ b/products/templates/forms/login.html
@@ -69,7 +69,7 @@
                                             <span>یا</span>
                                         </div>
                                         <div class="register-link">
-                                            <a href="register.html" class="btn btn-outline-secondary">ثبت نام <i
+                                            <a href="{% url 'products:register' %}" class="btn btn-outline-secondary">ثبت نام <i
                                                     class="bi bi-person-plus ms-1"></i></a>
                                         </div>
                                     </div>
