--- a/products/templates/forms/delete_products.html
+++ b/products/templates/forms/delete_products.html
@@ -4,7 +4,7 @@
     ایا از حذف
 {{ product.title }}
     مطمین هستید؟
-    <a href="{% url 'product:profile' %}">
+    <a href="{% url 'products:profile' %}">
     profile
     </a>
     <br>
